# Intraday_Quant

./: README.md  pyproject.toml
cpp/: CMakeLists.txt  README.md
cpp/include/: bar_record.hpp  validate.hpp
cpp/src/: main.cpp  validate.cpp
data/processed/: AAPL_5min_processed.csv  AMZN_5min_processed.csv  GME_5min_processed.csv  META_5min_processed.csv  MGNI_5min_processed.csv  MSFT_5min_processed.csv  NVDA_5min_processed.csv  SPY_5min_processed.csv  TSLA_5min_processed.csv  WMT_5min_processed.csv
data/raw/historical/: AAPL_5min_raw.csv  AMZN_5min_raw.csv  GME_5min_raw.csv  META_5min_raw.csv  MGNI_5min_raw.csv  MSFT_5min_raw.csv  NVDA_5min_raw.csv  SPY_5min_raw.csv  TSLA_5min_raw.csv  WMT_5min_raw.csv
data/raw/incoming/: AAPL_5min_update.csv  AMZN_5min_update.csv  GME_5min_update.csv  META_5min_update.csv  MGNI_5min_update.csv  MSFT_5min_update.csv  NVDA_5min_update.csv  SPY_5min_update.csv  TSLA_5min_update.csv  WMT_5min_update.csv
data/raw/live/: AAPL_5min_live.csv  AMZN_5min_live.csv  GME_5min_live.csv  META_5min_live.csv  MGNI_5min_live.csv  MSFT_5min_live.csv  NVDA_5min_live.csv  (+3 more)
notebooks/: purpose.txt
scripts/: collect_fidelity_table.py  run_pipeline.py
src/backtest/: __init__.py  metrics.py  simulate.py  strategy.py
src/config/: load.py  settings.yaml
src/data/: bar_types.py  download.py  fake.py  load.py  paths.py
src/features/: build_features.py  indicators.py
src/labels/: make_labels.py
src/models/: predict.py  train.py
src/splits/: walk_forward.py
src/utils/: __init__.py  checks.py  logging.py  reporting.py  time_utils.py
(+100 files in other folders)
